--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 06:05:02 2018</p>
+         Last Run: Thu Nov 22 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
-                        <td>87</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>4</td>
                         <td>68</td>
-                        <td>0</td>
-                        <td>8</td>
+                        <td>1</td>
+                        <td>10</td>
                         <td>S</td>
-                        <td>76</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -60,9 +60,9 @@
                         <td>4</td>
                         <td>65</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>S</td>
-                        <td>65</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>49</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -103,7 +103,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-4",
+                 "-6",
                  "-4",
                  "-4"
                ]
@@ -116,7 +116,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-1",
+                 "-2",
                  "-1",
                  "-1"
                ]
@@ -188,7 +188,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
+                 "74",
                  "68",
                  "65",
                  "66"
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "87",
-                 "76",
-                 "65",
-                 "49"
+                 "85",
+                 "74",
+                 "64",
+                 "50"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 06:05:02 2018</p>
+         Last Run: Thu Nov 22 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,7 +268,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
@@ -284,7 +284,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>24</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -405,7 +405,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
+                 "54",
                  "50",
                  "49"
                ]
@@ -417,7 +417,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "27",
-                 "24",
+                 "23",
                  "19"
                ]
              }
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 06:05:02 2018</p>
+         Last Run: Thu Nov 22 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,11 +483,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>78</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -495,11 +495,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>88</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>93</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "77",
-                 "78"
+                 "76",
+                 "79",
+                 "81"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "88",
-                 "93"
+                 "79",
+                 "90",
+                 "95"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 06:05:02 2018</p>
+         Last Run: Thu Nov 22 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>86</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>42</td>
+                        <td>WSW</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,11 +710,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>85</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>42</td>
+                        <td>WSW</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,10 +722,10 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>86</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>42</td>
                      </tr>
                   </tbody>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
-                 "85",
-                 "86"
+                 "84",
+                 "83",
+                 "84"
                ]
              },
              {
@@ -846,8 +846,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "42",
-                 "42",
+                 "41",
+                 "41",
                  "42"
                ]
              }
