--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 07:05:02 2018</p>
+         Last Run: Thu Nov 22 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -43,12 +43,12 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>4</td>
                         <td>68</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>S</td>
                         <td>74</td>
                      </tr>
@@ -70,11 +70,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>50</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -103,7 +103,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-6",
+                 "-4",
                  "-4",
                  "-4"
                ]
@@ -116,7 +116,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-2",
+                 "-1",
                  "-1",
                  "-1"
                ]
@@ -191,7 +191,7 @@
                  "74",
                  "68",
                  "65",
-                 "66"
+                 "67"
                ]
              },
              {
@@ -203,7 +203,7 @@
                  "85",
                  "74",
                  "64",
-                 "50"
+                 "49"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 07:05:02 2018</p>
+         Last Run: Thu Nov 22 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -280,7 +280,7 @@
                         <td>2</td>
                         <td>0</td>
                         <td>1</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
@@ -292,7 +292,7 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -406,8 +406,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "54",
-                 "50",
-                 "49"
+                 "49",
+                 "48"
                ]
              },
              {
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 07:05:02 2018</p>
+         Last Run: Thu Nov 22 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -479,7 +479,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
@@ -487,7 +487,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>79</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>95</td>
+                        <td>96</td>
                      </tr>
                   </tbody>
                </table>
@@ -622,7 +622,7 @@
                "data":[
                  "76",
                  "79",
-                 "81"
+                 "80"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
+                 "80",
                  "90",
-                 "95"
+                 "96"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 07:05:02 2018</p>
+         Last Run: Thu Nov 22 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,7 +698,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>84</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -722,7 +722,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>84</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
                  "83",
-                 "84"
+                 "83",
+                 "83"
                ]
              },
              {
