--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 09:05:02 2018</p>
+         Last Run: Thu Nov 22 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -50,19 +50,19 @@
                         <td>1</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>74</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>4</td>
                         <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>51</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -104,7 +104,7 @@
                "data":[
                  "-5",
                  "-4",
-                 "-4",
+                 "-3",
                  "-5"
                ]
              },
@@ -117,7 +117,7 @@
                "data":[
                  "-2",
                  "-1",
-                 "-1",
+                 "0",
                  "-1"
                ]
              }
@@ -201,9 +201,9 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "84",
-                 "74",
-                 "65",
-                 "51"
+                 "75",
+                 "66",
+                 "52"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 09:05:02 2018</p>
+         Last Run: Thu Nov 22 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -280,11 +280,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>1</td>
-                        <td>49</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>23</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -295,7 +295,7 @@
                         <td>49</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>19</td>
                      </tr>
                   </tbody>
@@ -406,7 +406,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "54",
-                 "49",
+                 "51",
                  "49"
                ]
              },
@@ -417,7 +417,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "27",
-                 "23",
+                 "24",
                  "19"
                ]
              }
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 09:05:02 2018</p>
+         Last Run: Thu Nov 22 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -479,7 +479,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
@@ -487,7 +487,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>79</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>95</td>
+                        <td>96</td>
                      </tr>
                   </tbody>
                </table>
@@ -622,7 +622,7 @@
                "data":[
                  "76",
                  "79",
-                 "81"
+                 "80"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
+                 "81",
                  "90",
-                 "95"
+                 "96"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 09:05:02 2018</p>
+         Last Run: Thu Nov 22 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -722,7 +722,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>84</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -837,7 +837,7 @@
                "data":[
                  "83",
                  "83",
-                 "84"
+                 "83"
                ]
              },
              {
