--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 10:05:02 2018</p>
+         Last Run: Thu Nov 22 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -32,22 +32,22 @@
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>-2</td>
-                        <td>-5</td>
+                        <td>-4</td>
                         <td>5</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>S</td>
-                        <td>84</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>68</td>
-                        <td>1</td>
+                        <td>5</td>
+                        <td>69</td>
+                        <td>0</td>
                         <td>10</td>
                         <td>S</td>
                         <td>75</td>
@@ -62,19 +62,19 @@
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>66</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-5</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>5</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>52</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -102,10 +102,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
+                 "-4",
                  "-4",
                  "-3",
-                 "-5"
+                 "-4"
                ]
              },
              {
@@ -118,7 +118,7 @@
                  "-2",
                  "-1",
                  "0",
-                 "-1"
+                 "0"
                ]
              }
            ]
@@ -177,7 +177,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "4",
+                 "5",
                  "4",
                  "5"
                ]
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "68",
+                 "74",
+                 "69",
                  "66",
-                 "67"
+                 "68"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "84",
+                 "83",
                  "75",
-                 "66",
-                 "52"
+                 "69",
+                 "54"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 10:05:02 2018</p>
+         Last Run: Thu Nov 22 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,7 +268,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
@@ -284,7 +284,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>24</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -295,7 +295,7 @@
                         <td>49</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>19</td>
                      </tr>
                   </tbody>
@@ -405,7 +405,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "55",
                  "51",
                  "49"
                ]
@@ -417,7 +417,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "27",
-                 "24",
+                 "23",
                  "19"
                ]
              }
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 10:05:02 2018</p>
+         Last Run: Thu Nov 22 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -479,7 +479,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
@@ -487,7 +487,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>81</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>96</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -622,7 +622,7 @@
                "data":[
                  "76",
                  "79",
-                 "80"
+                 "81"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "81",
+                 "79",
                  "90",
-                 "96"
+                 "95"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 10:05:02 2018</p>
+         Last Run: Thu Nov 22 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -722,7 +722,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>83</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -837,7 +837,7 @@
                "data":[
                  "83",
                  "83",
-                 "83"
+                 "84"
                ]
              },
              {
